<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.datasqrl</groupId>
    <artifactId>sqrl-root</artifactId>
    <version>0.6.0-SNAPSHOT</version>
  </parent>

  <artifactId>sqrl-tools</artifactId>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <packaging>pom</packaging>

  <modules>
    <module>sqrl-cli</module>
    <module>sqrl-config</module>
    <module>sqrl-discovery</module>
    <module>sqrl-packager</module>
    <module>sqrl-run</module>
    <module>sqrl-test</module>
    <module>sqrl-flink-runner</module>
  </modules>
</project>